objects/ASI_HK_CRM_Running_Number__c.object
<CustomObject>
    <description>ASI HK CRM - used to keep track of various auto number running numbers</description>
    <fields>
        <fullName>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</fullName>
        <label>First Month of Fiscal Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Format__c</fullName>
        <label>Format</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Running_Number__c</fullName>
        <label>Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Running Number</label>
    <listViews>
        <fullName>ASI_HK_CRM</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_HK_CRM</value>
        </filters>
        <label>ASI_HK_CRM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_LUX_BRD</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_LUX</value>
        </filters>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_BRD</value>
        </filters>
        <label>ASI LUX &amp; BRD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CRM_CN</fullName>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_CRM_CN</value>
        </filters>
        <label>All - CN CRM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CRM_JP</fullName>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_CRM_JP</value>
        </filters>
        <label>All - JP CRM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CRM_TH</fullName>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>TH</value>
        </filters>
        <label>All - CRM TH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_JP_CRM_Customer</fullName>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_CRM_JP_Customer</value>
        </filters>
        <label>All - JP CRM Customer</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SG</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>SG</value>
        </filters>
        <label>SG</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TnE_TH</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Object_Name__c</columns>
        <columns>ASI_HK_CRM_Running_Number__c</columns>
        <columns>ASI_HK_CRM_Format__c</columns>
        <columns>ASI_HK_CRM_Fiscal_Year__c</columns>
        <columns>ASI_HK_CRM_First_Month_of_Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Object_Name__c</field>
            <operation>contains</operation>
            <value>ASI_TNE_TH</value>
        </filters>
        <label>TnE TH</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_IT_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Running  Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Running Numbers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_Running_Number</fullName>
        <active>true</active>
        <label>CN Running Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_Running_Number</fullName>
        <active>true</active>
        <label>TH CRM Running Number</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>